--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,79 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.main-container {
+  width: 500px;
+  margin: 0 auto;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
+.btn {
+  font-weight: bold;
+  font-size: 15px;
+  border: none;
+  background-color: rgb(13, 110, 184);
+  color: white;
+  padding: 6px 6px;
+  border-radius: 3px;
+  margin-top: 8px;
+  width: 180px;
+  text-decoration: none;
+  min-width: 300px
+}
+.btnblack{
+  font-weight: bold;
+  font-size: 15px;
+  border: none;
+  background-color: rgb(1, 5, 8);
+  color: white;
+  padding: 6px 6px;
+  border-radius: 3px;
+  margin-top: 8px;
+  width: 180px;
+  text-decoration: none;
+  min-width: 300px
+}
+
+.input{
+  
+  border: solid 1px #ccc;
+  border-radius: 3px;
+  padding: 8px 10px;
+  margin-top: 5px;
+}
+
+.label {
+  padding-top: 5px;
+}
+
+.a{
+  color: rgb(13, 110, 184);
+  font-weight: bold;
+  text-decoration: none
+}
